# medrag-pro

./: .env.example  README.md  config.py  main.py  pyproject.toml  test-rag.py  test-retriever.py  test_eval.py  test_generate_eval.py  test_retrieval_reranking.py
data/: eval_results.json  eval_testset.json
data/indexes/: bm25.pkl  bm25_corpus.pkl  pkl-opener.py
docker/: docker-compose.yaml  docker-compose.yml
evaluation/: __init__.py  ragas_eval.py  testset_generator.py
generation/: __init__.py  prompt_templates.py  rag_chain.py
ingestion/: __init__.py  chunker.py  embedder.py  pdf_parser.py  pipeline.py
reranking/: __init__.py  reranker.py
retrieval/: __init__.py  bm25_index.py  hybrid_retriever.py  vector_store.py
